@@ -1,5 +1,11 @@
 2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
 
+	* gui/gdmlogin.c, gui/greeter/greeter.c: 
+	  Fix "==" to "=" in assignment.  Fixes bug
+	  #322083, suggestions from dmacks@netspace.org.
+
+2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
+
 	Fixes bug #322083, suggestions from dmacks@netspace.org.
 
 	* daemon/auth.c, vicious-extensions/glade-helper.c:
@@ -8,7 +14,6 @@
 	  gdm_kill_thingies reference since it is unused.
 	* gui/gdmsetup.c: Add missing "static void" to
 	  include_all_toggle function.
-	* vicious-extensions/glade-helper.c
 
 2005-11-16  Brian Cameron <Brian.Cameron@sun.com>
 
